Modifie les tableaux de ressources intermédiaires pour le format d'Emmanuel avec n° de page

--- a/latex/modeles/affichages.tex
+++ b/latex/modeles/affichages.tex
@@ -72,11 +72,15 @@
 		\end{center}
 }
 
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% %
+% Tableau listant toutes les ressources et leur exemple en guise d'introduction au semestre  %
+% -> obsolète avec le listeTitreRessourceIndex d'Emmanuel
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% %
 \newcommand{\listeTitreRessource}[1]{
     \setlength{\tabcolsep}{0.125cm} % Marge des colonnes
     \setlength{\extrarowheight}{2pt} % Marge des lignes
-
-    \begin{tabular}[t]{|P|T|}
+		
+    \begin{tabular}[t]{|X|Y|Z|}
         \hline {\bfseries Code} & {\bfseries Nom} \\
         \hline
 
