--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -223,7 +223,7 @@ Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de 
 %
 \subsection{Ressources du semestre 1}
 %
-\listeTitreRessource{\sem}
+\listeTitreRessourceIndex{\sem}
 
 \subsection{Matrice Compétences/SAÉs-Ressources du semestre 1}
 
@@ -257,7 +257,7 @@ Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de 
 
 \subsection{Ressources du semestre 2}
 
-\listeTitreRessource{\sem}
+\listeTitreRessourceIndex{\sem} 
 
 \subsection{Matrice Compétences/SAÉs-Ressources du semestre 2}
 
