bizarrement, abréviation ne prend qu'un b

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -279,7 +279,7 @@ Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de 
 \subsection{Fiches ressources du semestre 2}
 \affichageRessource{\sem}
 
-\section{Abbréviations}
+\section{Abréviations}
 
 \begin{multicols}{2}\small
 \input{synthese/abbreviations.tex}
