Avec petit espace en fin de cases

--- a/latex/ressources/R101.tex
+++ b/latex/ressources/R101.tex
@@ -50,7 +50,7 @@ les principes des normes et protocoles essentiels des réseaux locaux,
 comme Ethernet, \textabbrv{TCP}/\textabbrv{IP}, \textabbrv{DHCP}, \textabbrv{DNS}.\\
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
-pourront servir de support).}
+pourront servir de support).\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
