--- a/latex/ressources/R102.tex
+++ b/latex/ressources/R102.tex
@@ -42,7 +42,7 @@ Elle participe principalement à la compétence RT1 «Administrer les
 réseaux et l'Internet» à travers la compréhension et l'utilisation de la
 partie réseau des systèmes d'exploitation, la compréhension de
 l'interopérabilité des systèmes via les protocoles réseaux, ainsi que
-les notions de services rendus et de performance du réseau.}
+les notions de services rendus et de performance du réseau.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -72,7 +72,7 @@ routinière. Les éléments de cybersécurité pourront être abordés via des
 exemples tels que l'arp-spoofing, la prise d'empreintes via \textabbrv{ICMP}, des
 captures, la génération et analyse de trames. Des liens avec les aspects
 sécurité informatique et réseaux mentionnés en R101 seront également
-faits.
+faits.\\[3pt]
 }
 
 % Mots-clés
