--- a/latex/ressources/R103.tex
+++ b/latex/ressources/R103.tex
@@ -53,7 +53,7 @@ Pour la compétence «Connecter les entreprises et les usagers» (RT2),
 elle aborde les notions d'exploitation du câblage (brassage).\\
 Elle contribue aussi à la compétence «Créer des outils et applications
 informatiques pour les R\&T» (RT3) à travers la découverte du poste
-client et de son environnement logiciel.}
+client et de son environnement logiciel.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -77,7 +77,7 @@ client et de son environnement logiciel.}
   Redondance et détection de boucles dans un réseau commuté~: \textabbrv{STP}, \textabbrv{RSTP}.
 \end{itemize}
 Sur chaque thème, faire le lien avec les notions de cybersécurité
-abordées en R101.
+abordées en R101.\\[3pt]
 }
 
 % Mots-clés
