--- a/latex/ressources/R104.tex
+++ b/latex/ressources/R104.tex
@@ -43,7 +43,7 @@ fonctionnement des équipements réseaux et télécoms. La puissance
 maximale permet d'aborder les problèmes d'adaptation d'impédance.\\
 A travers des exercices de mise en place de circuits simples, les
 étudiants seront capables d'implanter des circuits, de placer les
-instruments de mesure et d'interpréter les résultats.}
+instruments de mesure et d'interpréter les résultats.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
