--- a/latex/ressources/R105.tex
+++ b/latex/ressources/R105.tex
@@ -37,7 +37,7 @@ techniques pour la compétence «connecter les entreprises et les usagers»
 à travers les apprentissages critiques «mesurer et analyser les signaux»
 et «déployer des supports de transmission».\\
 Il s'agit d'étudier les concepts fondamentaux des supports de
-transmission.}
+transmission.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
