--- a/latex/ressources/R107.tex
+++ b/latex/ressources/R107.tex
@@ -44,7 +44,7 @@ ressource est nécessaire pour apprendre à développer des outils
 informatiques à usage interne d'une équipe~: compétence «Créer des outils
 et applications informatiques pour les R\&T» (RT3) et pour
 l'automatisation du déploiement et de la maintenance des outils
-logiciels~: compétence «Administrer les réseaux et l'Internet» (RT1).}
+logiciels~: compétence «Administrer les réseaux et l'Internet» (RT1).\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -79,7 +79,7 @@ contenus suivants seront traités~:
 \item
   Suivi de versions (git, svn).
 \end{itemize}
-L'utilisation de l'anglais est préconisée pour la documentation du code.
+L'utilisation de l'anglais est préconisée pour la documentation du code.\\[3pt]
 }
 
 % Mots-clés
