--- a/latex/ressources/R108.tex
+++ b/latex/ressources/R108.tex
@@ -51,7 +51,7 @@ réseau, dans des scripts simples. Ces commandes sont les bases d'appui
 pour administrer - par la suite - un réseau et de ses services~:
 compétence «Administrer les réseaux et l'Internet» (RT1).\\
 Elle contribue donc aux apprentissages critiques mentionnés
-précédemment.}
+précédemment.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
