--- a/latex/ressources/R109.tex
+++ b/latex/ressources/R109.tex
@@ -43,7 +43,7 @@ description de contenus et de sa présentation. Elle traite donc de la
 création de contenus Web (un thème abordé par PIX,
 \url{https://pix.fr/competences}) mais également des technologies mises
 en œuvre pour délivrer ses contenus aux utilisateurs par le biais d'un
-navigateur Web.}
+navigateur Web.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
