--- a/latex/ressources/R110.tex
+++ b/latex/ressources/R110.tex
@@ -42,7 +42,7 @@ contribue aussi à la compétence «Créer des outils et applications
 informatiques pour les R\&T» (RT3) à travers des mises en situations,
 jeux de rôle, dialogues qui permettent la prise de parole en continu et
 en interaction, en développant les compétences de compréhension dans un
-contexte professionnel technique.}
+contexte professionnel technique.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
