--- a/latex/ressources/R111.tex
+++ b/latex/ressources/R111.tex
@@ -44,7 +44,7 @@ communication écrite ou orale ou interpersonnelle. L'enseignement
 s'appuiera sur des exemples de situations professionnelles typiques du
 domaine réseaux et télécommunications. Au-delà de la communication
 proprement dite, il s'agira aussi de sensibiliser les étudiants à
-l'importance des savoir-être et aux enjeux du développement durable.}
+l'importance des savoir-être et aux enjeux du développement durable.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
