--- a/latex/ressources/R113.tex
+++ b/latex/ressources/R113.tex
@@ -40,7 +40,7 @@ transformations (retard, dilatation, amplification, offset) qui sont
 explicitées par cette ressource. On veillera à montrer l'intérêt des
 concepts présentés pour modéliser les systèmes électroniques et on
 choisira de préférence des exercices en lien avec l'électronique et les
-télécommunications.}
+télécommunications.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
