--- a/latex/ressources/R114.tex
+++ b/latex/ressources/R114.tex
@@ -41,7 +41,7 @@ certains signaux dont la puissance est mesurée en décibels qui
 nécessitent la connaissance des fonctions exponentielle et logarithme.
 On veillera à montrer l'intérêt des concepts présentés pour modéliser
 les systèmes électroniques et on choisira de préférence des exercices en
-lien avec l'électronique et les télécommunications.}
+lien avec l'électronique et les télécommunications.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
