--- a/latex/ressources/R115.tex
+++ b/latex/ressources/R115.tex
@@ -36,7 +36,7 @@
 
 % Le descriptif
 \ajoutRancrage{Le professionnel R\&T peut être impliqué dans différents projets
-l'amenant à travailler en équipe.}
+l'amenant à travailler en équipe.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
