--- a/latex/ressources/R201.tex
+++ b/latex/ressources/R201.tex
@@ -49,7 +49,7 @@ informatiques pour les R\&T» (RT3) à travers la découverte du poste
 client et de son environnement logiciel.\\
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
-pourront servir de support).}
+pourront servir de support).\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
