--- a/latex/ressources/R202.tex
+++ b/latex/ressources/R202.tex
@@ -45,7 +45,7 @@ de l'entreprise (processus, utilisateurs, automatisation) et pour
 utiliser des solutions de virtualisation, de conteneurisation.\\
 Elle contribue aussi à la compétence «Créer des outils et applications
 informatiques pour les R\&T» (RT3) à travers la découverte du poste
-client et de son environnement logiciel.}
+client et de son environnement logiciel.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
