--- a/latex/ressources/R203.tex
+++ b/latex/ressources/R203.tex
@@ -47,7 +47,7 @@ les étudiants aux risques de sécurité liés à la configuration de ces
 services\\
 On introduira des notions de sécurité informatique (les ressources
 associées aux recommandations de l'\textabbrv{ANSSI}, CyberEdu, CyberMalveillance
-pourront servir de support).}
+pourront servir de support).\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
