--- a/latex/ressources/R204.tex
+++ b/latex/ressources/R204.tex
@@ -42,7 +42,7 @@ analogique, numérique) ou un réseau partagé (\textabbrv{ToIP}). Une découver
 services téléphoniques utiles à la communication dans l'entreprise sera
 réalisée, ainsi qu'une première approche des réseaux publics existants.\\
 En fonction du contexte local, on pourra orienter l'étude vers un réseau
-téléphonique mixte (\textabbrv{TDM}/\textabbrv{IP}) ou \textabbrv{ToIP}.}
+téléphonique mixte (\textabbrv{TDM}/\textabbrv{IP}) ou \textabbrv{ToIP}.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -68,7 +68,7 @@ téléphonique mixte (\textabbrv{TDM}/\textabbrv{IP}) ou \textabbrv{ToIP}.}
   services associés.
 \end{itemize}
 On veillera à relier chaque contenu à des problématiques de sécurité
-informatique.
+informatique.\\[3pt]
 }
 
 % Mots-clés
