--- a/latex/ressources/R205.tex
+++ b/latex/ressources/R205.tex
@@ -41,7 +41,7 @@ La caractérisation du comportement d'un système télécom en fonction de
 la fréquence permet au technicien d'appréhender la notion de bande
 passante et d'introduire celle de canal de transmission.\\
 La représentation spectrale des signaux permet de comprendre quelles
-modifications ces signaux vont subir dans un système télécom.}
+modifications ces signaux vont subir dans un système télécom.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -52,7 +52,7 @@ Représentations temporelles et fréquentielles des signaux\,; analyse
 spectrale de signaux réels (exemples~: audio, WiFi, \textabbrv{ADSL}).\\
 Influence de la fonction de transfert d'un système sur un signal
 (exemples~: audio, numérique).\\
-Bilans de liaison de systèmes de transmissions.
+Bilans de liaison de systèmes de transmissions.\\[3pt]
 }
 
 % Mots-clés
