--- a/latex/ressources/R206.tex
+++ b/latex/ressources/R206.tex
@@ -41,7 +41,7 @@ Les systèmes de Réseaux et Télécoms véhiculent en permanence de données
 numérisées. Ce module vient donc présenter les principes de la
 numérisation de l'information, les contraintes de cette numérisation et
 les conséquences sur la qualité du signal. Il trouvera des prolongements
-en téléphonie, ou en télécommunications numériques.}
+en téléphonie, ou en télécommunications numériques.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
