--- a/latex/ressources/R207.tex
+++ b/latex/ressources/R207.tex
@@ -52,7 +52,7 @@ l'entreprise. Cette ressource introduit les systèmes de gestion de base
 de données. Elle présente différentes alternatives technologiques pour
 le stockage et le codage de l'information en fonction des données et de
 leur usage. L'accès aux données utilise des langages et des outils
-spécifiques qui seront introduits.}
+spécifiques qui seront introduits.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -85,7 +85,7 @@ spécifiques qui seront introduits.}
 \item
   Lecture d'une documentation technique (\textabbrv{UML}, diagramme de classes).
 \end{itemize}
-L'utilisation de l'anglais est préconisée dans la documentation du code.
+L'utilisation de l'anglais est préconisée dans la documentation du code.\\[3pt]
 }
 
 % Mots-clés
