--- a/latex/ressources/R208.tex
+++ b/latex/ressources/R208.tex
@@ -45,7 +45,7 @@ tant sur les variables manipulant les données, les fichiers qui les
 sauvegardent ou les restaurent, que sur l'organisation (arborescence) de
 son projet. La ressource introduit ses éléments structurels en
 contribuant à l'acquisition des apprentissages critiques mentionnés
-précédemment.}
+précédemment.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -83,7 +83,7 @@ précédemment.}
 \item
   Introduction au traitement des erreurs.
 \end{itemize}
-L'utilisation de l'anglais est préconisée dans la documentation du code.
+L'utilisation de l'anglais est préconisée dans la documentation du code.\\[3pt]
 }
 
 % Mots-clés
