--- a/latex/ressources/R209.tex
+++ b/latex/ressources/R209.tex
@@ -51,7 +51,7 @@ les protocoles de communication du Web que veiller à la sécurité de
 ceux-ci. Il doit également pouvoir accéder, traiter et afficher des
 informations provenant de différentes sources de données telles que des
 \textabbrv{SGBD}, des \textabbrv{API} ou des fichiers structurés. La présente ressource
-contribue aux apprentissages critiques mentionnés précédemment.}
+contribue aux apprentissages critiques mentionnés précédemment.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -82,7 +82,7 @@ contribue aux apprentissages critiques mentionnés précédemment.}
   Sensibilisation à la sécurisation de sites~: failles \textabbrv{XSS}, \textabbrv{XSS} stockée,
   injections \textabbrv{SQL}.
 \end{itemize}
-L'utilisation de l'anglais est préconisée dans la documentation du code.
+L'utilisation de l'anglais est préconisée dans la documentation du code.\\[3pt]
 }
 
 % Mots-clés
