--- a/latex/ressources/R211.tex
+++ b/latex/ressources/R211.tex
@@ -38,7 +38,7 @@
 claire et professionnelle se poursuit au semestre deux, en ajoutant de
 nouvelles exigences. L'enseignement s'appuie de nouveau sur des exemples
 de situations professionnelles typiques du domaine réseaux et
-télécommunications.}
+télécommunications.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
@@ -91,7 +91,7 @@ télécommunications.}
 \end{itemize}
 Création de supports vidéo (film, tutoriel, notice) - outils de veille
 documentaire - critique des médias sociaux - participation à des actions
-culturelles - résumé - synthèse d'un document - débat - revue de presse
+culturelles - résumé - synthèse d'un document - débat - revue de presse\\[3pt]
 }
 
 % Mots-clés
