--- a/latex/ressources/R212.tex
+++ b/latex/ressources/R212.tex
@@ -50,9 +50,11 @@
   recherche de stage ou d'un contrat
   d'alternance
 \item
-  se caractériser pour préparer son stage ou son alternance
-\item
-  se présenter, se définir\,;
+  se caractériser pour préparer son stage ou son alternance,
+  \begin{itemize}
+    \item
+    seprésenter,sedéfinir\,;
+  \end{itemize}
 \item
   exprimer l'intérêt professionnel, valeurs, motivations, traits de
   personnalité, expériences professionnelles
@@ -70,19 +72,20 @@
 Les activités notamment proposées dans cette ressource sont~:
 \begin{itemize}[topsep=5pt]
 \item
-  Enquête métiers et veille professionnelle\,;
+  enquête métiers et veille professionnelle\,;
 \item
-  Rencontres et entretiens avec des professionnels et anciens étudiants\,;
+  rencontres et entretiens avec des professionnels et anciens étudiants
+ \,;
 \item
-  Visite d'entreprise ou d'organisation\,;
+  visite d'entreprise ou d'organisation\,;
 \item
-  Participation à des conférences métiers\,;
+  participation à des conférences métiers\,;
 \item
-  Construction d'une identité professionnelle numérique\,;
+  construction d'une identité professionnelle numérique\,;
 \item
-  Découverte et compréhension d'un bassin d'emploi particulier.
+  découverte et compréhension d'un bassin d'emploi particulier.
 \end{itemize}
 }
 
 % Mots-clés
-\ajoutRmotscles{\textabbrv{CV}, Lettre de motivation, Entretien de recrutement, Stage, Alternance.}
+\ajoutRmotscles{\textabbrv{CV}, Lettre de motivation, Entretien de recrutement, Identité professionnelle, Stage, Alternance.}
