--- a/latex/saes/SAE11.tex
+++ b/latex/saes/SAE11.tex
@@ -39,7 +39,7 @@ devront respecter la charte informatique imposée par la \textabbrv{DSI}. A plus
 terme, en tant que professionnels des services informatiques de
 l'entreprise, ils auront à leur tour à charge de sensibiliser les
 utilisateurs et de leur faire connaître et accepter la charte de bon
-usage des moyens informatiques.}
+usage des moyens informatiques.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R101}{Initiation aux réseaux informatiques}
@@ -50,7 +50,7 @@ Rapport d'analyse des risques numériques et présentation diaporama ou
 conception d'une courte vidéo de sensibilisation (par ex: «en 180
 secondes») destinée à vulgariser les premiers pas en cybersécurité.\\
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
