--- a/latex/saes/SAE11_exemple1.tex
+++ b/latex/saes/SAE11_exemple1.tex
@@ -6,7 +6,7 @@
 
 \ajoutESproblematique{Il s'agit de faire prendre conscience aux étudiants des risques qu'ils
 peuvent encourir sans considérer avec attention l'usage de leur
-environnement numérique.}
+environnement numérique.\\[3pt]}
 
 \ajoutESdescription{
 On pourra faire un focus particulier sur les points suivants.
@@ -60,7 +60,7 @@ On pourra également utiliser les supports~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet.}
+\ajoutESformes{TP, projet.\\[3pt]}
 
 
 
@@ -71,4 +71,4 @@ informatique à un collaborateur néo-entrant dans son entreprise. Cette
 démonstration devra s'accompagner d'exemples concrets.\\
 Cette démonstration pourra se faire sous la forme de présentation orale
 ou écrite et accompagnée de différents média (infographie, affiche,
-vidéo\ldots).}
+vidéo\ldots).\\[3pt]}
