--- a/latex/saes/SAE11_exemple2.tex
+++ b/latex/saes/SAE11_exemple2.tex
@@ -6,7 +6,7 @@
 
 \ajoutESproblematique{Il s'agit de présenter avec une approche éducative et technologique les
 menaces numériques communes (cybersécurité) et de savoir mettre en place
-les actions pour y remédier.}
+les actions pour y remédier.\\[3pt]}
 
 \ajoutESdescription{
 On pourra faire un focus particulier sur les points suivants~:
@@ -50,7 +50,7 @@ On pourra également utiliser les supports~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet.}
+\ajoutESformes{TP, projet.\\[3pt]}
 
 
 
@@ -62,4 +62,4 @@ des exemples concrets les bonnes pratiques pour y remédier. Il doit
 service informatique de son entreprise.\\
 Cette démonstration pourra se faire sous la forme de présentation orale
 ou écrite et accompagnée de différents média (infographie, affiche,
-vidéo\ldots).}
+vidéo\ldots).\\[3pt]}
