--- a/latex/saes/SAE11_exemple3.tex
+++ b/latex/saes/SAE11_exemple3.tex
@@ -6,7 +6,7 @@
 
 \ajoutESproblematique{Il s'agit de faire découvrir aux étudiants les différents types de
 vulnérabilités pouvant exister dans un système informatique, ainsi que
-les conséquences qu'elles peuvent engendrer.}
+les conséquences qu'elles peuvent engendrer.\\[3pt]}
 
 \ajoutESdescription{
 Cette étude commencera par une recherche documentaire permettant
@@ -59,7 +59,7 @@ On pourra également utiliser les supports~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet.}
+\ajoutESformes{TP, projet.\\[3pt]}
 
 
 
@@ -69,4 +69,4 @@ campagne de sensibilisation pour «grand public». Le format de «1
 vulnérabilité, 1 ou 2 pages» doit être le format à viser pour imposer
 une description synthétique et éviter les copier/coller compulsifs avec
 détails techniques superflus. Les exemples d'attaques présentés doivent
-être réalistes et compréhensibles par des non spécialistes.}
+être réalistes et compréhensibles par des non spécialistes.\\[3pt]}
