--- a/latex/saes/SAE12.tex
+++ b/latex/saes/SAE12.tex
@@ -39,7 +39,7 @@ compréhension est nécessaire avant toute intervention sur un élément
 constitutif d'un réseau informatique. L'étudiant devra mettre en
 pratique ses connaissances techniques de configuration de postes de
 travail et d'équipements du réseau afin aboutir à un fonctionnement
-stable.}
+stable.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R101}{Initiation aux réseaux informatiques}
@@ -61,7 +61,7 @@ stable.}
   Rapport technique avec présentation diaporama.
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
