--- a/latex/saes/SAE12_exemple1.tex
+++ b/latex/saes/SAE12_exemple1.tex
@@ -9,7 +9,7 @@ réseau informatique de chaque étudiant. On s'appuiera sur les concepts
 fondamentaux des systèmes d'exploitation, de vocabulaire en
 réseaux-informatiques, des protocoles réseaux et des outils logiciel
 réseau de base. L'étudiant s'intéressera également à recenser les
-caractéristiques de consommation d'énergie des équipements du réseau.}
+caractéristiques de consommation d'énergie des équipements du réseau.\\[3pt]}
 
 \ajoutESdescription{
 Il s'agit de comprendre l'agencement des briques réseaux (accès au
@@ -32,10 +32,10 @@ Enfin, on pourra initier les étudiants les plus avancés à l'usage de la
 distribution Linux Kali en \textabbrv{VM} avec l'outil nmap pour découvrir (en
 interne) les ports ouverts sur les équipements du réseau local
 domestique. Bien expliquer que l'usage de cet outil de test de
-pénétration doit être réalisé en respectant l'éthique.
+pénétration doit être réalisé en respectant l'éthique.\\[3pt]
 }
 
-\ajoutESformes{TP, projet}
+\ajoutESformes{TP, projet\\[3pt]}
 
 
 
@@ -49,4 +49,4 @@ peut être complété par les informations provenant d'un compteur
 On peut utiliser un logiciel de dessin technique (type
 \url{https://app.diagrams.net,} Microsoft Visio ou Lucidchart) pour les
 schémas réseaux en utilisant à bon escient les symboles et pictogrammes
-(switch, routeur, firewall, WiFi, \ldots).}
+(switch, routeur, firewall, WiFi, \ldots).\\[3pt]}
