--- a/latex/saes/SAE12_exemple2.tex
+++ b/latex/saes/SAE12_exemple2.tex
@@ -8,7 +8,7 @@
 l'interconnexion de switches, un routeur d'accès Internet (\textabbrv{FO} ou \textabbrv{4G}), un
 point d'accès WiFi, savoir effectuer la segmentation du réseau,
 configurer le plan d'adressage (statique/\textabbrv{DHCP}) et le routage,
-installation des postes clients (Windows, Linux) pour les utilisateurs.}
+installation des postes clients (Windows, Linux) pour les utilisateurs.\\[3pt]}
 
 \ajoutESdescription{
 Il s'agit de~:
@@ -36,7 +36,7 @@ Il s'agit de~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet}
+\ajoutESformes{TP, projet\\[3pt]}
 
 
 
@@ -48,4 +48,4 @@ démonstration technique progressive par tests unitaires, ou un rapport
 de synthèse ou une présentation avec diaporama.\\
 On peut utiliser un logiciel de dessin technique pour les schémas
 réseaux en utilisant à bon escient les symboles et pictogrammes (switch,
-routeur, firewall, WiFi, \ldots).}
+routeur, firewall, WiFi, \ldots).\\[3pt]}
