--- a/latex/saes/SAE12_exemple3.tex
+++ b/latex/saes/SAE12_exemple3.tex
@@ -6,7 +6,7 @@
 
 \ajoutESproblematique{Le but est d'amener les étudiants à construire eux-mêmes un réseau
 simplifié d'équipements actifs filaires interconnectés, sur la base d'un
-cahier des charges général type « schéma de dépannage ».}
+cahier des charges général type « schéma de dépannage ».\\[3pt]}
 
 \ajoutESdescription{
 Cette SAÉ nécessite un travail en amont de recensement des
@@ -41,7 +41,7 @@ En synthèse, l'étudiant sera confronté à~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet}
+\ajoutESformes{TP, projet\\[3pt]}
 
 
 
