--- a/latex/saes/SAE12_exemple4.tex
+++ b/latex/saes/SAE12_exemple4.tex
@@ -10,7 +10,7 @@ en y accédant simplement en \textabbrv{SSH}, peu important le réseau sur leque
 est connecté. On peut placer sur le Raspberry une \textabbrv{LED} qui s'allumerait
 et pour les plus avancés une photoRésistance (avec un pont diviseur
 entre photorésistance et une résistance de 10kOhms) pour récupérer la
-valeur de la luminosité ambiante.}
+valeur de la luminosité ambiante.\\[3pt]}
 
 \ajoutESdescription{
 La SAÉ va servir de base pour de futures SAE plus poussées en IoT ou en
@@ -38,7 +38,7 @@ Les étapes à réaliser seraient les suivantes~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet}
+\ajoutESformes{TP, projet\\[3pt]}
 
 
 
