--- a/latex/saes/SAE13.tex
+++ b/latex/saes/SAE13.tex
@@ -33,7 +33,7 @@
 mettre en œuvre ou analyser une liaison physique (support
 cuivre/fibre/radio), faire des mesures pour un premier niveau de
 caractérisation, savoir présenter des résultats de mesure à un client ou
-un collaborateur.}
+un collaborateur.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R103}{Réseaux locaux et équipements actifs}
@@ -59,7 +59,7 @@ L'évaluation s'appuiera sur tout ou partie des éléments suivants~:
   présentation orale des mesures réalisées.
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
