--- a/latex/saes/SAE13_exemple1.tex
+++ b/latex/saes/SAE13_exemple1.tex
@@ -23,7 +23,7 @@
 \end{itemize}
 L'étudiant saura mobiliser les compétences pour réaliser des mesures ou
 pour identifier et caractériser un support et savoir rédiger un
-compte-rendu de mesure.}
+compte-rendu de mesure.\\[3pt]}
 
 \ajoutESdescription{
 L'étudiant devra s'appuyer sur ses connaissances, notamment les concepts
@@ -83,7 +83,7 @@ Exemples de mise en oeuvre~:
 
 \ajoutESformes{Mini-projet en binôme associant un TP long, encadré par un enseignant et
 des heures non encadrées pour, par exemple, la préparation du TP puis
-pour la rédaction du compte rendu.}
+pour la rédaction du compte rendu.\\[3pt]}
 
 
 
