--- a/latex/saes/SAE14.tex
+++ b/latex/saes/SAE14.tex
@@ -39,7 +39,7 @@ contribue également à développer son réseau professionnel et social,
 avec lequel il peut partager ses centres d'intérêt.\\
 Le professionnel R\&T doit donc savoir se présenter sur Internet, tout
 en mesurant l'importance et la portée des contenus qu'il diffuse
-(e-réputation, segmentation vie privée/vie publique, \ldots).}
+(e-réputation, segmentation vie privée/vie publique, \ldots).\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R108}{Bases des systèmes d'exploitation}
@@ -61,7 +61,7 @@ en mesurant l'importance et la portée des contenus qu'il diffuse
   Grille de suivi
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
