--- a/latex/saes/SAE14_exemple1.tex
+++ b/latex/saes/SAE14_exemple1.tex
@@ -10,7 +10,7 @@ son entreprise ou sur le Web. Rédiger ses pages suppose à la fois d'en
 travailler le contenu (choix des informations) que la forme (outils
 technologiques des sites Web) en prenant en compte les spécificités du
 lecteur (collaborateurs francophones ou internationales, réseau
-professionnel, \ldots).}
+professionnel, \ldots).\\[3pt]}
 
 \ajoutESdescription{
 L'étudiant développera ses premières pages personnelles sous la forme
@@ -39,10 +39,10 @@ pourront par exemple être travaillés de concert avec les enseignants de
 communication, d'anglais, de \textabbrv{PPP} et d'informatique.\\
 La réalisation pourra éventuellement utiliser un système de gestion de
 contenu (CMS, par exemple Wordpress).\\
-Le travail pourra être intégré au portfolio de l'étudiant.
+Le travail pourra être intégré au portfolio de l'étudiant.\\[3pt]
 }
 
-\ajoutESformes{TP, projet, séminaire de traces dans le cadre du \textabbrv{PPP}.}
+\ajoutESformes{TP, projet, séminaire de traces dans le cadre du \textabbrv{PPP}.\\[3pt]}
 
 
 
