--- a/latex/saes/SAE15.tex
+++ b/latex/saes/SAE15.tex
@@ -44,7 +44,7 @@ comptables , archivage, \ldots) pour être réutilisées à d'autres fins ou
 récurrents (mensualisation de bilan, sauvegarde de données périodique,
 \ldots) gagnent à être automatisés.\\
 Le professionnel R\&T doit donc développer des scripts ou des programmes
-pour gérer de façon efficace le traitement de ces données.}
+pour gérer de façon efficace le traitement de ces données.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R107}{Fondamentaux de la programmation}
@@ -68,7 +68,7 @@ pour gérer de façon efficace le traitement de ces données.}
   et/ou Soutenance orale présentant le travail réalisé.
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
