--- a/latex/saes/SAE15_exemple1.tex
+++ b/latex/saes/SAE15_exemple1.tex
@@ -25,7 +25,7 @@ données, par exemple~:
 Dans ce contexte, le professionnel R\&T est amené à collecter des
 données, les traiter pour en extraire une représentation
 exploitable/parlante, puis en publier la présentation. L'objectif global
-est d'automatiser au mieux les différentes étapes de son travail.}
+est d'automatiser au mieux les différentes étapes de son travail.\\[3pt]}
 
 \ajoutESdescription{
 L'étudiant s'initiera aux différentes étapes d'un projet informatique~:
@@ -106,7 +106,7 @@ différentes étapes~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet.}
+\ajoutESformes{TP, projet.\\[3pt]}
 
 
 
