--- a/latex/saes/SAE16.tex
+++ b/latex/saes/SAE16.tex
@@ -88,7 +88,7 @@ Aussi, parallèlement à ses objectifs traditionnels issus de l'expérience
 acquise dans le cadre du DUT, le \textabbrv{PPP} devra, tel un fil conducteur,
 permettre à l'étudiant d'être guidé dans la compréhension et
 l'appropriation de son cursus de formation, ainsi que dans la
-méthodologie d'écriture du portfolio.}
+méthodologie d'écriture du portfolio.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R111}{Expression-Culture-Communication Professionnelles 1}
@@ -97,7 +97,7 @@ méthodologie d'écriture du portfolio.}
 % Livrable
 \ajoutSlivrables{
 Portfolio~: ensemble de traces et de preuves de l'acquisition des
-compétences.
+compétences.\\[3pt]
 }
 
 % Mots-clés
