--- a/latex/saes/SAE21.tex
+++ b/latex/saes/SAE21.tex
@@ -37,7 +37,7 @@ est d'amener l'étudiant à répondre aux besoins de commutation, de
 routage, de services réseaux de base et de sécurité formulés par une
 petite structure multisite. Ce réseau s'appuie sur des équipements et
 des services informatiques incontournables mais fondamentaux pour
-fournir à la structure un réseau fonctionnel et structuré.}
+fournir à la structure un réseau fonctionnel et structuré.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R101}{Initiation aux réseaux informatiques}
@@ -65,7 +65,7 @@ fournir à la structure un réseau fonctionnel et structuré.}
   Vidéo de démonstration du fonctionnement
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
