--- a/latex/saes/SAE21_exemple3.tex
+++ b/latex/saes/SAE21_exemple3.tex
@@ -10,7 +10,7 @@ réinstaller les ordinateurs ayant servis lors de ces stages
 informatique de l'entreprise confie à l'étudiant qui endosse le rôle d'
 ``Assistant administrateur réseau'' la mission d'automatiser le
 déploiement des systèmes d'exploitation sur les postes clients de la
-salle de formation.}
+salle de formation.\\[3pt]}
 
 \ajoutESdescription{
 Il s'agit d'explorer les techniques classiques d'installation système.
@@ -38,7 +38,7 @@ comprend~:
   Adaptation des clés d'identifications des ordinateurs.
 \end{itemize}
 A minima, deux ordinateurs (physiques et/ou virtuels) sont nécessaires~:
-un serveur et un client.
+un serveur et un client.\\[3pt]
 }
 
 \ajoutESformes{De façon individuelle ou collective, sur des heures encadrées et non
