--- a/latex/saes/SAE22.tex
+++ b/latex/saes/SAE22.tex
@@ -32,7 +32,7 @@
 % Le description
 \ajoutSdescription{Dans cette SAE, l'étudiant saura mobiliser les compétences pour analyser
 des signaux d'un système de transmission, les exploiter, et les
-présenter sous forme d'un bilan à un client ou un collaborateur.}
+présenter sous forme d'un bilan à un client ou un collaborateur.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R104}{Fondamentaux des systèmes électroniques}
@@ -53,7 +53,7 @@ présenter sous forme d'un bilan à un client ou un collaborateur.}
   Présentation orale des performances mesurées.
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
