--- a/latex/saes/SAE22_exemple1.tex
+++ b/latex/saes/SAE22_exemple1.tex
@@ -9,7 +9,7 @@ par exemple par une alimentation défectueuse ou un moteur d'ascenseur
 avec des problèmes de \textabbrv{CEM}. Ces perturbateurs peuvent entraîner une
 déconnexion totale d'une ligne \textabbrv{ADSL} voire de toutes les lignes d'un
 immeuble. L'analyse spectrale et la recherche de ces perturbateurs est
-donc une fonction du maintien en condition opérationnelle de ces lignes.}
+donc une fonction du maintien en condition opérationnelle de ces lignes.\\[3pt]}
 
 \ajoutESdescription{
 La SAE porte sur l'analyse d'un signal \textabbrv{ADSL} dans le domaine spectral et
@@ -39,12 +39,12 @@ pourra comporter jusqu'à 5 parties~:
 \end{itemize}
 Elle pourra s'appuyer sur une librairie pour calculer la \textabbrv{FFT} (par
 exemple numpy en Python) et une autre pour l'affichage d'une courbe (par
-exemple matplotlib en Python)
+exemple matplotlib en Python)\\[3pt]
 }
 
-\ajoutESformes{TP et projet semi-autonome.}
+\ajoutESformes{TP et projet semi-autonome.\\[3pt]}
 
 
 
 \ajoutESmodalite{Présentation des résultats dans un notebook Python, avec explications
-claires prouvant la compréhension.}
+claires prouvant la compréhension.\\[3pt]}
