--- a/latex/saes/SAE22_exemple2.tex
+++ b/latex/saes/SAE22_exemple2.tex
@@ -8,7 +8,7 @@
 radios reçus peuvent être de qualité très variable.\\
 Cette qualité dépend par exemple de la puissance reçue, de la fréquence
 ou de la bande de fréquence à recevoir, des conditions d'environnement,
-de la localisation du récepteur, ou encore de la présence de parasites.}
+de la localisation du récepteur, ou encore de la présence de parasites.\\[3pt]}
 
 \ajoutESdescription{
 L'étudiant devra appréhender quels sont les paramètres pertinents pour
@@ -43,6 +43,7 @@ Les exemples de signaux à étudier pourront être de type~:
 \end{itemize}}
 
 
+
 \ajoutESmodalite{\vspace{-10pt}
 \begin{itemize}[topsep=5pt]
 \item
@@ -50,4 +51,3 @@ Les exemples de signaux à étudier pourront être de type~:
 \item
   Présentation orale des performances mesurées et de leur analyse.
 \end{itemize}}
-
