--- a/latex/saes/SAE23_exemple1.tex
+++ b/latex/saes/SAE23_exemple1.tex
@@ -15,7 +15,7 @@ application Web en le plaçant dans un contexte de réponse à un appel
 d'offres~: un client cherche un prestataire pour développer une
 application remplissant un cahier des charges précis~: par exemple, une
 solution pour cartographier son matériel de réseau local sous la forme
-d'un site web.}
+d'un site web.\\[3pt]}
 
 \ajoutESdescription{
 Partant des spécifications fournies par le client, l'étudiant devra
@@ -73,7 +73,7 @@ Les transformations attendues chez l'étudiant sont~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, Projet, Serious game}
+\ajoutESformes{TP, Projet, Serious game\\[3pt]}
 
 
 
