--- a/latex/saes/SAE23_exemple2.tex
+++ b/latex/saes/SAE23_exemple2.tex
@@ -12,7 +12,7 @@ gestion des informations sur le personnel pour les ressources humaines,
 ; l'outil sera ainsi facilement accessible des utilisateurs, grâce à un
 simple navigateur Web. Le professionnel doit alors - en plus du
 développement - documenter les fonctionnalités de son outil et former
-les utilisateurs à son utilisation.}
+les utilisateurs à son utilisation.\\[3pt]}
 
 \ajoutESdescription{
 Cette SAÉ propose à l'étudiant de s'initier au développement d'une telle
@@ -65,7 +65,7 @@ la SAé pourra être mise en oeuvre avec différentes étapes~:
 \end{itemize}
 }
 
-\ajoutESformes{TP, projet}
+\ajoutESformes{TP, projet\\[3pt]}
 
 
 
