--- a/latex/saes/SAE24.tex
+++ b/latex/saes/SAE24.tex
@@ -41,7 +41,7 @@
 \ajoutSac{AC0316}{S'intégrer dans un environnement propice au développement et au travail collaboratif}
 
 % Le description
-\ajoutSdescription{}
+\ajoutSdescription{\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R101}{Initiation aux réseaux informatiques}
@@ -88,7 +88,7 @@
   Et/ou grille de suivi
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
