--- a/latex/saes/SAE24_exemple2.tex
+++ b/latex/saes/SAE24_exemple2.tex
@@ -29,7 +29,7 @@ accès aux fichiers partagés pour quelques postes d'un réseau local. Il
 devra en assurer le bon fonctionnement et la maintenance.\\
 Il devra également maîtriser le vocabulaire technique en anglais et
 savoir communiquer avec les autres filiales de l'entreprise
-internationale.
+internationale.\\[3pt]
 }
 
 \ajoutESformes{De façon individuelle ou collective, sur des heures encadrées et non
