--- a/latex/saes/SAE24_exemple3.tex
+++ b/latex/saes/SAE24_exemple3.tex
@@ -8,7 +8,7 @@
 sensibiliser le personnel avec des exemples simples (et si possible
 spectaculaires), aux conséquences d'une mauvaise hygiène informatique.\\
 Il est du rôle du responsable du SI de savoir enseigner les bonnes
-pratiques de la façon la plus simple et la plus convaincante possible.}
+pratiques de la façon la plus simple et la plus convaincante possible.\\[3pt]}
 
 \ajoutESdescription{
 Dans la continuité de la SAÉ ``sensibilisation à l'hygiène informatique
@@ -29,7 +29,7 @@ de vulnérabilités convenu en début d'étude, qui seront choisies dans le
 Les conséquences de ces attaques seront ici encore décrites en termes de
 gravité d'atteinte à la disponibilité, à l'intégrité et/ou à la
 confidentialité des biens impactés, afin d'insister sur l'importance de
-l'hygiène informatique en contexte professionnel.
+l'hygiène informatique en contexte professionnel.\\[3pt]
 }
 
 \ajoutESformes{\vspace{-10pt}
