--- a/latex/ressources/R106.tex
+++ b/latex/ressources/R106.tex
@@ -41,7 +41,7 @@ Réseaux et Télécoms. Cette ressource vise tout d'abord à permettre la
 compréhension du codage et du stockage des données. Puis elle permet de
 comprendre de façon très fine le comportement interne des systèmes
 numériques avec notamment des notions de temps d'exécution. Enfin elle
-permettra aux étudiants de relier ces systèmes au monde extérieur.}
+permettra aux étudiants de relier ces systèmes au monde extérieur.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
