--- a/latex/ressources/R112.tex
+++ b/latex/ressources/R112.tex
@@ -35,28 +35,26 @@
 première année de B.U.T. permet à l'étudiant~:
 \begin{itemize}[topsep=5pt]
 \item
-  s'approprier son champ d'activité\,;
-\item
-  se constituer un panorama des métiers dans le domaine des réseaux et
-  télécommunications\,;
-\item
-  se constituer un panorama des entreprises dans le secteur des réseaux
-  et télécommunications\,;
-\item
-  amener les étudiants à se projeter en tant que professionnels en
-  mobilisant les techniques de recrutement
-  dans le cadre d'une recherche de stage ou d'un contrat d'alternance\,;
-\item
-  découvrir le portfolio et son utilisation dans la formation\,;
+  d'avoir une compréhension exhaustive du référentiel de compétences de
+  la formation et des éléments
+  le structurant (composantes essentielles, niveaux, apprentissages
+  critiques, famille de situations).
 \item
   de faire le lien entre les niveaux de compétences ciblés, les SAÉ et
   les ressources au programme de
   chaque semestre\,;
 \item
-  d'avoir une compréhension exhaustive du référentiel de compétences de
-  la formation et des éléments
-  le structurant (composantes essentielles, niveaux, apprentissages
-  critiques, famille de situations).
+  de s'approprier son champ d'activité\,; se constituer un panorama des
+  métiers dans le domaine des réseaux
+  et télécommunications\,;
+\item
+  d'amener les étudiants à se projeter en tant que professionnels en
+  mobilisant les techniques de recrutement
+  dans le cadre d'une recherche de stage ou d'un contrat d'alternance\,;
+\item
+  découvrir le portfolio et son utilisation dans la formation\,;
+\item
+  d'engager une réflexion sur la connaissance de soi.
 \end{itemize}}
 
 % Contenus
@@ -64,18 +62,18 @@ première année de B.U.T. permet à l'étudiant~:
 Les activités pouvant être proposées dans cette ressource sont~:
 \begin{itemize}[topsep=5pt]
 \item
-  Rencontres d'entrepreneurs, de chefs de service, de techniciens et
+  rencontres d'entrepreneurs, de chefs de service, de techniciens et
   d'enseignants\,;
 \item
-  Visites d'entreprises, forums\,;
+  visites d'entreprises, forums\,;
 \item
-  Témoignages, relations avec d'anciens diplômés\,;
+  témoignages, relations avec d'anciens diplômés\,;
 \item
-  Découverte et compréhension d'un bassin d'emploi particulier\,;
+  découverte et compréhension d'un bassin d'emploi particulier\,;
 \item
-  Intérêt et prise en main d'un portfolio\,;
+  intérêt et prise en main d'un portfolio\,;
 \item
-  Déterminer ses atouts personnels.
+  détermination de ses atouts personnels.
 \end{itemize}
 }
 
