--- a/latex/ressources/R213.tex
+++ b/latex/ressources/R213.tex
@@ -38,7 +38,7 @@
 peuvent être modélisés sous la forme de vecteurs ou de matrices. Par
 ailleurs, certains algorithmes sont itératifs d'où l'importance de la
 notion de récurrence. On veillera à illustrer les concepts présentés par
-l'exploitation d'algorithmes mis en œuvre via un outil informatique.}
+l'exploitation d'algorithmes mis en œuvre via un outil informatique.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
