--- a/latex/ressources/R214.tex
+++ b/latex/ressources/R214.tex
@@ -41,7 +41,7 @@ systèmes sont souvent étudiés en régime linéaire, d'où l'intérêt de
 définir des équivalents.\\
 On veillera à montrer l'intérêt des concepts présentés pour modéliser
 les systèmes électroniques et on choisira de préférence des exercices en
-lien avec l'électronique et les télécommunications.}
+lien avec l'électronique et les télécommunications.\\[3pt]}
 
 % Contenus
 \ajoutRcontenudetaille{
