--- a/latex/saes/SAE22_exemple3.tex
+++ b/latex/saes/SAE22_exemple3.tex
@@ -10,7 +10,7 @@ transmis, le débit ou la bande passante nécessaire, le coût des
 équipements (codec gratuit ou payant par exemple). Il est donc
 intéressant de pouvoir comparer plusieurs solutions de numérisation afin
 de déterminer la plus judicieuse, en se focalisant, dans ce contexte de
-1ère année de BUT, sur des signaux de type audio.}
+1ère année de BUT, sur des signaux de type audio.\\[3pt]}
 
 \ajoutESdescription{
 Les diverses solutions de numérisation pourront faire intervenir la
