--- a/latex/saes/SAE23.tex
+++ b/latex/saes/SAE23.tex
@@ -47,7 +47,7 @@ pratique. Elles peuvent être documentées grâce à des pages Web voire
 mises à disposition des utilisateurs directement dans leur simple
 navigateur Web.\\
 Le professionnel R\&T doit donc mobiliser son expertise en développement
-informatique pour le compte de son entreprise.}
+informatique pour le compte de son entreprise.\\[3pt]}
 
 % Les ressources
 \ajoutSressources{R107}{Fondamentaux de la programmation}
@@ -78,7 +78,7 @@ informatique pour le compte de son entreprise.}
   Méthode de validation
 \end{itemize}
 L'étudiant s'approprie son portfolio. Des temps sont prévus pour qu'il y
-synthétise sa production technique et son analyse argumentée.
+synthétise sa production technique et son analyse argumentée.\\[3pt]
 }
 
 % Mots-clés
