--- a/latex/saes/SAE24_exemple1.tex
+++ b/latex/saes/SAE24_exemple1.tex
@@ -14,7 +14,7 @@ WiFi), des terminaux (\textabbrv{PC}, smartphone, \ldots) et des protocoles (IP,
 réseau domestique.\\
 Il devra également reconnaître les \textabbrv{OS} des différents appareils connectés
 à ce réseau et décrire leurs caractéristiques, notamment en termes de
-sécurité.}
+sécurité.\\[3pt]}
 
 \ajoutESdescription{
 Il s'agit d'un projet individuel permettant à l'étudiant de développer
@@ -39,11 +39,11 @@ L'étudiant devra mobiliser toutes les ressources vues jusqu'à présent~:
 
 \ajoutESformes{Il s'agit d'apprendre comment s'architecture un réseau informatique par
 l'observation et la pratique en s'appuyant sur l'environnement réseau
-domestique propre à chaque étudiant.}
+domestique propre à chaque étudiant.\\[3pt]}
 
 
 
 \ajoutESmodalite{L'étudiant doit être capable de retranscrire son réseau grâce à un outil
 de schéma réseau et de le détailler avec l'ensemble des observations
 relevées. Il doit être capable de produire une présentation type
-powerpoint et de la présenter oralement en 5 minutes maximum.}
+powerpoint et de la présenter oralement en 5 minutes maximum.\\[3pt]}
